--- a/static/css/style.css
+++ b/static/css/style.css
@@ -62,3 +62,21 @@ p{
     background-color:blue
 
 }
+.create-group-btn {
+    background-color: #4CAF50; /* Green background */
+    border: none; /* Remove borders */
+    color: white; /* White text */
+    padding: 15px 32px; /* Padding */
+    text-align: center; /* Center text */
+    text-decoration: none; /* Remove underline */
+    display: inline-block; /* Display as inline-block */
+    font-size: 16px; /* Increase font size */
+    margin: 4px 2px; /* Add margin */
+    cursor: pointer; /* Add cursor pointer */
+    border-radius: 10px; /* Rounded corners */
+}
+
+/* Hover effect */
+.create-group-btn:hover {
+    background-color: #45a049; /* Darker green */
+}
