--- a/myecommerce/templates/ecommerce/store.html
+++ b/myecommerce/templates/ecommerce/store.html
@@ -11,6 +11,7 @@
 		        <h6><strong>{{product.name}}</strong></h6>
 		        <hr>
 				<a data-product="{{product.id}}" data-action = "add" name="update-cart" class="btn btn-outline-success add-btn update-cart" href="#">Add to Cart</a>
+				<a href="products" download>Download PDF</a>
 		        
 		        <a class="btn btn-outline-success" href="#">View</a>
 		        
