--- a/myecommerce/templates/ecommerce/main.html
+++ b/myecommerce/templates/ecommerce/main.html
@@ -109,7 +109,7 @@ const csrftoken = getToken('csrftoken');
                     <span>Terms and Conditions</span>
                     <span>Offers</span>
                     <span>Contact Us</span>
-                    <span>Report<a href="abdulssekyanzi@gmail.com">Report a Bug</a></span>
+                    <span><a href="abdulssekyanzi@gmail.com">Report a Bug</a></span>
                     
                 </div>
                 <div class="reachout">
