--- a/myecommerce/templates/ecommerce/main.html
+++ b/myecommerce/templates/ecommerce/main.html
@@ -119,10 +119,10 @@ const csrftoken = getToken('csrftoken');
                     <h2>Contact us</h2>
                     <a href="mailto:abdulssekyanzi@gmail.com" class="email-link">Email Us</a>
                     <span><i class="fa fa-facebook-f"></i><small><a href="#top">@Eduuka</a></small></span>
-                    <span><i class="fa fa-twitter"></i> <small>@eduuka012</small></span>
-                    <span><i class="fa fa-instagram"></i><small>@_eduuka01</small></span>
-                    <span><i class="fa fa-pinterest-p"></i><small>@Eduuka012</small></span>
-                    <span><i class="fa fa-youtube"></i><small>@Eduuka</small></span>
+                    <span><i class="fa fa-twitter"></i> <small><a href="mailto:abdulssekyanzi@gmail.com" class="email-link">@eduuka012</a></small></span>
+                    <span><i class="fa fa-instagram"></i><small><a href="mailto:abdulssekyanzi@gmail.com" class="email-link">@_eduuka01</a></small></span>
+                    <span><i class="fa fa-pinterest-p"></i><small><a href="mailto:abdulssekyanzi@gmail.com" class="email-link">@Eduuka012</a></small></span>
+                    <span><i class="fa fa-youtube"></i><small></small><a href="mailto:abdulssekyanzi@gmail.com" class="email-link">@Eduuka</a></span>
                 </div>
                 </footer>
 
