--- a/myecommerce/templates/ecommerce/search_results.html
+++ b/myecommerce/templates/ecommerce/search_results.html
@@ -25,7 +25,7 @@
     {% endif %}
     <form action="{% url 'product_search' %}" method="get">
         <input type="text" name="query" placeholder="Search products...">
-        <button type="submit">Search</button>
+        <button type="submit">Search<i class="fa fa-database" aria-hidden="true"></i></button>
     </form>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
